--- a/mb-poc-frontend/src/app/app.component.html
+++ b/mb-poc-frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
-  <app-director></app-director>
+  <div class="row">
+    <div class="col s6">
+      <app-director></app-director>
+    </div>
+  </div>
 </div>
