--- a/mb-poc-frontend/src/app/app.component.html
+++ b/mb-poc-frontend/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col s6">
-      <app-director></app-director>
+      <mat-card>
+        <mat-card-title>{{ director.firstName }}</mat-card-title>
+        <app-director [director]="director"></app-director>
+      </mat-card>
     </div>
   </div>
 </div>
