--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col s6">
       <mat-card *ngFor="let director of director$ | async; trackBy: trackById">
-        <mat-card-title>{{ director.firstName }} {{ director.lastName }}</mat-card-title>
-        <app-director [director]="director" [subject]="subject"></app-director>
+        <mat-card-title>{{ director.id }}{{ director.firstName }} {{ director.lastName }}</mat-card-title>
+        <app-director [directorId]="director.id"></app-director>
       </mat-card>
     </div>
   </div>
